Aside content width collapsing bugfix.

--- a/resources/assets/client/styles/layout/_content.scss
+++ b/resources/assets/client/styles/layout/_content.scss
@@ -26,6 +26,7 @@
 }
 
 .content-aside {
+  width: 100%;
   max-width: 332px;
   flex-shrink: 0;
   padding: 0 16px;
